2009-10-23  smeghead <smeghead@users.sourceforge.jp>

    * ラジオボタンの項目のJavaScript部分がIEで動作しないのを修正した。
	* Seleniumテストの更新

2009-10-22  smeghead <smeghead@users.sourceforge.jp>

    * Makefileのdistターゲットの修正。tar玉からはWindowsの依存バイナリを省くようにした。
    * ラジオボタンで選択できる単一選択肢の項目を追加できるようにした。

2009-09-10  smeghead <smeghead@users.sourceforge.jp>

    * HTMLのcssファイルの読み込み位置を修正した。

2009-08-31  smeghead <smeghead@users.sourceforge.jp>

    * 詳細の説明メッセージを変更した。
    * フッタのstarbug1の文字を公式サイトへのリンクに変更した。

2009-08-25  smeghead <smeghead@users.sourceforge.jp>

    * サブプロジェクトのページの左上にパンクズを表示するようにした。
    * 「新しいチケットを登録する」のリンクを目立つようにした。

2009-08-24  smeghead <smeghead@users.sourceforge.jp>

    * 検索結果のRSS形式のダウンロードでメモリの開放忘れがあったのを修正した。

2009-08-23  smeghead  <smeghead@smeghead-laptop>

    * 1.3.02リリース

2009-08-17  smeghead <smeghead@users.sourceforge.jp>

    * メッセージカタログを生成するMakefileを修正した。
    * 複数サブプロジェクトの検索の検索結果をチケットの投稿日時の降順で表示するように修正した。
    * qiuさんに中国語のリソース翻訳の修正版を提供してもらいました。

2009-08-06  smeghead  <smeghead@smeghead-laptop>

    * mattnさんから、Windowsポーティングパッチを頂きました。ありがとうございま
    す。

2009-07-25  smeghead  <smeghead@smeghead-laptop>

    * 1.3.01リリース

2009-07-25  smeghead  <smeghead@smeghead-laptop>

    * 英語のリソースの翻訳を追加。
    * タイポの修正。
    * 中国語のリソースを追加した。qiuさんに翻訳してもらいました。ありがとうご
    ざいます。

2009-07-24  smeghead <smeghead@users.sourceforge.jp>

    * ライセンスをGPLに変更する準備
    * トップの検索結果の表示用CSSの変更。

2009-07-22  smeghead <smeghead@users.sourceforge.jp>

    * javascriptのリソースを国際化した。

2009-07-18  smeghead <smeghead@users.sourceforge.jp>

    * 中国語のリソースを修正した。

2009-07-18  smeghead <smeghead@users.sourceforge.jp>

    * FreeBSD(さくらインターネット)でsetlocaleが機能しなかったため、setenvにて環境変数を更新するように修正した。

2009-07-17  smeghead <smeghead@users.sourceforge.jp>

    * Makefileで、FreeBSDの場合、LFLAGSに-lintlを追加するように修正した。

2009-07-16  smeghead  <smeghead@smeghead-laptop>

    * 1.2.10-bataリリース

2009-07-16  smeghead <smeghead@users.sourceforge.jp>

    * 検索条件に更新日時の日数指定を追加した。

2009-07-15  smeghead <smeghead@users.sourceforge.jp>

    * トップのスタイルシートの調整をした。